# deepfake-detection

./: .gitignore  readme.md  run.sh
project/: .dockerignore  Dockerfile  docker-compose.yml  main-xception.py  main.py  pyproject.toml  requirements.txt
project/data/: predictions.jsonl
project/models/: README.md  models.json
project/nginx/: nginx.conf
scripts/: bench.py  run_batch_predict.sh
vision-truth-finder/: package-lock.json  package.json  vite.config.ts
vision-truth-finder/src/: index.css
vision-truth-finder/src/components/: FileUpload.tsx  ModelInfo.tsx  ResultDisplay.tsx
vision-truth-finder/src/pages/: Index.tsx
