[project]
name = "deepfake-api"
version = "0.1.0"
description = "Deepfake detection API using XceptionNet ensemble"
requires-python = ">=3.12"
dependencies = [
    # API / Web
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pydantic",
    "aiohttp",
    "slowapi",
    # ML / Image Processing
    "tensorflow-cpu",
    "numpy",
    "pillow",
    "opencv-python",
    "mtcnn",
    # Observability
    "prometheus-fastapi-instrumentator",
    "prometheus-client",
    # Utilities
    "python-dotenv",
    "supabase",
]
